# Friendly-Kitten

./: CMakeLists.txt  README.md  build.sh  run.sh  update.sh
src/: game.cpp  game.hpp  main.cpp
